--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #0a0a0a;
     color: white;
     font-family: 'Poppins', sans-serif;
+    margin-top: 20px;
 }
 
 /* HERO */
